--- a/TechJobsPersistent/Views/Employer/Add.cshtml
+++ b/TechJobsPersistent/Views/Employer/Add.cshtml
@@ -1,4 +1,5 @@
-﻿<h1>Add New Employer</h1>
+﻿@model List<TechJobsPersistent.Models.Employer>
+<h1>Add New Employer</h1>
 
 <form asp-controller="Employer" asp-action="ProcessAddEmployerForm" method="post">
     <div class="form-group">
