--- a/TechJobsPersistent/Views/Employer/About.cshtml
+++ b/TechJobsPersistent/Views/Employer/About.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<TechJobsPersistent.Models.Employer>
+﻿@using TechJobsPersistent.ViewModels;
+@model List<TechJobsPersistent.Models.Employer>
 
 @foreach (Employer employer in Model)
 {
