--- a/TechJobsPersistent/Views/Employer/Index.cshtml
+++ b/TechJobsPersistent/Views/Employer/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model List<TechJobsPersistent.Models.Employer>
+﻿@using TechJobsPersistent.ViewModels;
+@model List<TechJobsPersistent.Models.Job>
 
 <h1>Employers Currently Hiring</h1>
 
@@ -10,10 +11,10 @@ else
 {
     <div>
         <ul>
-            @foreach (Employer employer in Model)
+            @foreach (Job jobs in Model)
             {
                 <li>
-                    <a asp-controller="Employer" asp-action="About" asp-route-id="@employer.Id">@employer.Name</a>
+                    <a asp-controller="Employer" asp-action="About" asp-route-id="@jobs.Id">@jobs.Name</a>
                 </li>
             }
         </ul>
